--- a/LeaveAppUI/src/app/homepage/homepage.component.css
+++ b/LeaveAppUI/src/app/homepage/homepage.component.css
@@ -1,15 +1,43 @@
-.body {
-  font-family: 'Segoe UI', sans-serif;
-  display: flex;
-  justify-content: center; 
-  align-items: center; 
-  min-height: 100vh; 
-  margin: 0; 
-  background-color: #f4f4f4;
+.page-wrapper {
+  background-color: white;
+  position: relative;
+}
+.page-wrapper::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url('/assets/images/logo.png');
+  background-size: cover;       
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.5;                 
+  border: 5px solid black;
+  
 }
 
-.card-img-top {
-  object-fit:cover;
-  height: 250px;
+.notify-card {
+  background-color: white;
+  z-index: 1;
+  width: 90%;
+  max-width: 500px;
+  border-radius: 20px;
 }
 
+.calendar-icon {
+  width: 50%;
+  height: 50%;
+}
+
+.arrow {
+  width: 30px;
+  height: 30px;
+}
+
+.click-link {
+  color: black;
+}
+
+.click-link:hover {
+  color: purple;
+}
