--- a/LeaveAppUI/src/app/homepage/homepage.component.html
+++ b/LeaveAppUI/src/app/homepage/homepage.component.html
@@ -1,19 +1,22 @@
-<div class="body">
-<div class="card shadow-lg p-4 text-center" style="width: 350px;">
-    <img src="assets/images/calendar.png" alt="Calendar" class="card-img-top">
+<div class="page-wrapper d-flex justify-content-center align-items-center min-vh-100">
+  <div class="card shadow-lg notify-card p-4 text-center rounded-4">
 
-    <div class="card-body">
-      <h5 class="card-title text-dark fw-bold">Good Day,<br>User!</h5>
-
-      <a routerLink="/notifyleave">
-        <img src="assets/images/mail_icon.png"
-             class="my-4"
-             style="width: 100px; height: 100px; border-radius: 50%; object-fit:fill; background-color:cornflowerblue;" 
-             alt="Notify Time Off">
-      </a>
-
-      <h6 class="fw-bold text-dark">Notify Your Time Off</h6>
-      <p class="text-dark">Thank you, for being diligent.</p>
+    <div class="mb-4">
+      <img src="assets/images/calendar.png" alt="Calendar Icon" class="calendar-icon">
     </div>
+
+    <h2 class="text-dark mb-1">Notify Your Leave</h2>
+
+    <h2 class="text-dark fs-5 mb-4">Good Morning! <br> User</h2>
+
+    <div class="d-flex justify-content-center align-items-center gap-2 mb-2">
+      <img src="assets/images/arrow.png" alt="Arrow" class="arrow">
+      <a routerLink="/notifyleave" class="click-link fs-5">
+        Click here
+      </a>
+    </div>
+
+    <h4>Take a break, you deserve it.</h4>
+
   </div>
 </div>
