--- a/LeaveAppUI/src/app/notifyleave/notifyleave.component.css
+++ b/LeaveAppUI/src/app/notifyleave/notifyleave.component.css
@@ -12,4 +12,9 @@
   opacity: 0.07; 
 }
 
+::ng-deep ng-select .ng-value, 
+::ng-deep ng-select .ng-placeholder, 
+::ng-deep ng-select .ng-option {
+  font-weight: normal !important;
+}
 
