--- a/LeaveAppUI/src/app/notifyleave/notifyleave.component.html
+++ b/LeaveAppUI/src/app/notifyleave/notifyleave.component.html
@@ -12,11 +12,10 @@
 
         <div class="mb-3 fw-bold">
           <label for="leaveType" class="form-label"><span class="text-danger">*</span>Leave Type </label>
-          <select id="leaveType" class="form-select" required formControlName="leaveType"
-            [ngClass]="{'is-invalid': leaveForm.get('leaveType')?.invalid && leaveForm.get('leaveType')?.touched}">
-            <option value="">Select... </option>
-            <option *ngFor="let type of leaveOptions" [value]="type">{{ type }}</option>
-          </select>
+          <ng-select [items]="leaveOptions" placeholder="Select..." formControlName="leaveType"
+            [class.is-invalid]="leaveForm.get('leaveType')?.invalid && leaveForm.get('leaveType')?.touched"
+            [searchable]="true">
+          </ng-select>
           <div *ngIf="leaveForm.get('leaveType')?.invalid && leaveForm.get('leaveType')?.touched" class="text-danger">
             <small *ngIf="leaveForm.get('leaveType')?.hasError('required')">This field is required.</small>
           </div>
@@ -64,7 +63,8 @@
 
         <div class="mb-3 fw-bold">
           <label for="briefReason" class="form-label">Brief Reason</label>
-          <textarea placeholder="Enter brief reason..." class="form-control" id="briefReason" rows="3" formControlName="briefReason"></textarea>
+          <textarea placeholder="Enter brief reason..." class="form-control" id="briefReason" rows="3"
+            formControlName="briefReason"></textarea>
         </div>
 
         <div class="mb-3  ">
@@ -89,8 +89,8 @@
 
 
         <div class="mb-3 ">
-          <label for="notifyTo" class="form-label fw-bold"><span class="text-danger">*</span>Notify To Recipient(s) <span
-              class="small text-muted">(Must add- Acc Supervisor)</span></label>
+          <label for="notifyTo" class="form-label fw-bold"><span class="text-danger">*</span>Notify To Recipient(s)
+            <span class="small text-muted">(Must add- Acc Supervisor)</span></label>
 
           <ng-select #notify [items]="listOfUsers" bindLabel="email" bindValue="id" [multiple]="true"
             placeholder='Start typing the Email id...' formControlName="notifyTo" [closeOnSelect]="false"
@@ -111,11 +111,10 @@
 
         <div class="mb-3 fw-bold">
           <label for="baseLocation" class="form-label"> <span class="text-danger">*</span>Base Location </label>
-          <select id="baseLocation" class="form-select" required formControlName="baseLocation"
-            [ngClass]="{'is-invalid': leaveForm.get('baseLocation')?.invalid && leaveForm.get('baseLocation')?.touched}">
-            <option value="">Select...</option>
-            <option *ngFor="let loc of locations" [value]="loc">{{ loc }}</option>
-          </select>
+          <ng-select [items]="locations" placeholder="Select..." formControlName="baseLocation"
+            [class.is-invalid]="leaveForm.get('baseLocation')?.invalid && leaveForm.get('baseLocation')?.touched"
+            [searchable]="true">
+          </ng-select>
           <div *ngIf="leaveForm.get('baseLocation')?.invalid && leaveForm.get('baseLocation')?.touched"
             class="text-danger">
             <small *ngIf="leaveForm.get('baseLocation')?.hasError('required')">This field is required.</small>
@@ -124,11 +123,10 @@
 
         <div class="mb-3 fw-bold">
           <label for="projectSow" class="form-label"><span class="text-danger">*</span>Project/SOW </label>
-          <select id="projectSow" class="form-select" required formControlName="projectSow"
-            [ngClass]="{'is-invalid': leaveForm.get('projectSow')?.invalid && leaveForm.get('projectSow')?.touched}">
-            <option value="">Select...</option>
-            <option *ngFor="let proj of projects" [value]="proj">{{proj}}</option>
-          </select>
+          <ng-select [items]="projects" placeholder="Select..." formControlName="projectSow"
+            [class.is-invalid]="leaveForm.get('projectSow')?.invalid && leaveForm.get('projectSow')?.touched"
+            [searchable]="true">
+          </ng-select>
           <div *ngIf="leaveForm.get('projectSow')?.invalid && leaveForm.get('projectSow')?.touched" class="text-danger">
             <small *ngIf="leaveForm.get('projectSow')?.hasError('required')">This field is required.</small>
           </div>
@@ -136,11 +134,10 @@
 
         <div class="mb-3 fw-bold">
           <label for="subLobTeam" class="form-label"><span class="text-danger">*</span>Sub-LOB/Team </label>
-          <select id="subLobTeam" class="form-select" required formControlName="subLobTeam"
-            [ngClass]="{'is-invalid': leaveForm.get('subLobTeam')?.invalid && leaveForm.get('subLobTeam')?.touched}">
-            <option value="">Select...</option>
-            <option *ngFor="let team of subLobteams" [value]="team">{{team}}</option>
-          </select>
+          <ng-select [items]="subLobteams" placeholder="Select..." formControlName="subLobTeam"
+            [class.is-invalid]="leaveForm.get('subLobTeam')?.invalid && leaveForm.get('subLobTeam')?.touched"
+            [searchable]="true">
+          </ng-select>
           <div *ngIf="leaveForm.get('subLobTeam')?.invalid && leaveForm.get('subLobTeam')?.touched" class="text-danger">
             <small *ngIf="leaveForm.get('subLobTeam')?.hasError('required')">This field is required.</small>
           </div>
@@ -149,11 +146,10 @@
         <div class="mb-3 fw-bold">
           <label for="leaveStatus" class="form-label"> <span class="text-danger">*</span>Leave Status <span
               class="small text-muted">(Pick Planned if start date is in future)</span></label>
-          <select id="leaveStatus" class="form-select" required formControlName="leaveStatus"
-            [ngClass]="{'is-invalid': leaveForm.get('leaveStatus')?.invalid && leaveForm.get('leaveStatus')?.touched}">
-            <option value="">Select...</option>
-            <option *ngFor="let leave of leaveStatus" [value]="leave">{{leave}}</option>
-          </select>
+          <ng-select [items]="leaveStatus" placeholder="Select..." formControlName="leaveStatus"
+            [class.is-invalid]="leaveForm.get('leaveStatus')?.invalid && leaveForm.get('leaveStatus')?.touched"
+            [searchable]="true">
+          </ng-select>
           <div *ngIf="leaveForm.get('leaveStatus')?.invalid && leaveForm.get('leaveStatus')?.touched"
             class="text-danger">
             <small *ngIf="leaveForm.get('leaveStatus')?.hasError('required')">This field is required.</small>
@@ -163,7 +159,8 @@
         <div class="mb-3 fw-bold">
           <div class="col-sm-8">
             <label for="comments" class="form-label">Comments</label>
-            <textarea placeholder="Enter your comments..." class="form-control" id="comments" rows="3" formControlName="comments"></textarea>
+            <textarea placeholder="Enter your comments..." class="form-control" id="comments" rows="3"
+              formControlName="comments"></textarea>
           </div>
         </div>
 
